--- a/examples/posenet/camera.html
+++ b/examples/posenet/camera.html
@@ -3,39 +3,90 @@
   <head>
     <meta charset = "utf-8">
     <meta name = "viewport" content = "width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>PoseNet - Camera Feed Demo</title>
+    <title> WebML PoseNet Camera Demo</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <style>
-      #gui{
+      #my-gui-container {
         position: relative;
-        top: 100px;
+        float: right;
+        z-index: 9999;  
+        margin: -545px -63px 0 0;
       }
+      .col {
+        position: relative;
+        top: 20px;
+      }
+      .progress-label {
+        float: left;
+        margin-right: 1em;
+        height: 1rem;
+        font-size: .75rem;
+      }
+      .nowrap {
+        position: relative;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        z-index: -10;
+      }
+
+      @media (max-width: 800px) {
+        #my-gui-container {
+          position: relative;
+          float: right;
+          z-index: 9999;  
+          margin: 0px 0px 0 0;
+        }
+        canvas {
+          width: 330px;
+          height: 330px;
+        }
     </style>
   </head>
 	
   <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark" style="width:100%">
-      <span class="navbar-brand mb-0 h1">WebML PoseNet Camera Demo</span>
+      <span class="navbar-brand mb-0 h1">WebML PoseNet Demo</span>
       <div class="btn-group">
-        <select onchange = "main();" id = "backend" class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          <option value = "webml">WebML</option>
-          <option value = "wasm">WASM</option>
-          <option selected = "selected">WebGL</option>
-        </select>
+        <button id="backend" type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Setting...
+        </button>
+        <div class="dropdown-menu dropdown-menu-right">
+          <button class="dropdown-item disabled" type="button" id="wasm">WASM</button>
+          <button class="dropdown-item disabled" type="button" id="webgl">WebGL2</button>
+          <button class="dropdown-item disabled" type="button" id="webml">WebML</button>
+        </div>
       </div>
     </nav>
-    <div id = "loading">
-      Loading the model...
-    </div>	
-    <div id = "camera" align="center">
-      <h4> Camera Demo</h4>
-      <canvas id="canvas" width = "500" height = "500"></canvas>
-      <canvas hidden id="canvas_2"></canvas>
-      <video  hidden id = "video" width = "500" height = "500" autoplay></video>
+    <div class="container" id="container">
+      <div id="progressContainer">
+        <div class="row">
+          <div class="col"></div>
+          <div class="col-8" align="center">
+            <div class="progress-label">Loading Model:</div>
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" id="progressBar">0%</div>
+            </div>
+          </div>
+          <div class="col"></div>
+        </div>
+      </div>
+      <div class="nowrap">
+        <div id = "camera">
+          <div align = "center" id = "demoTitle">
+            <h4> Camera Demo</h4>
+          </div>
+          <canvas id = "canvas" width = "500" height = "500"></canvas>
+          <canvas hidden id = "scaleCanvas"></canvas>
+          <video  hidden id = "video" width = "500" height = "500" autoplay></video>
+        </div>
+      </div>
+      <div id="my-gui-container"></div>
+      <div id="inferenceTime" class="col" align="center"></div>
     </div>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script src = "https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src = "https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src = "https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <script src = "../third_party/stats.min.js"></script>
     <script src = "../../dist/webml-polyfill.js"></script>
     <script src = "../util/base.js"></script>
@@ -44,9 +95,14 @@
     <script src = "src/MaxHeap.js"></script>
     <script src = "src/decodePose.js"></script>
     <script src = "src/DrawOutputs.js"></script>
-    <script type= "text/javascript" src="../third_party/dat.gui.js"></script>
-    <script src = "cameraGui.js"></script>
+    <script src = "../third_party/dat.gui.js"></script>
+    <script src = "gui.js"></script>
     <script src = "utils.js"></script>
-    <script src = "camera.js"></script>   
+    <script src = "camera.js"></script>  
+    <script>
+      window.onload = function() {
+        drawResult();
+      }
+    </script> 
   </body>
 </html>
