--- a/examples/posenet/camera.html
+++ b/examples/posenet/camera.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <style>
       #my-gui-container {
-        position: relative;
-        float: right;
-        z-index: 999;  
-        margin: -545px -43px 0 0;
+        position: absolute;
+        z-index: 999;
+        right: 10px;
+        top: 60px;
       }
       .col {
         position: relative;
@@ -29,12 +29,6 @@
       }
 
       @media (max-width: 700px) {
-        #my-gui-container {
-          position: relative;
-          float: right;
-          z-index: 999;  
-          margin: -372px -20px 0 0;
-        }
         .nowrap {
           position: relative;
           z-index: -10;
@@ -81,7 +75,7 @@
             <canvas id = "canvas" width = "500" height = "500"></canvas>
           </div>
           <canvas hidden id = "scaleCanvas"></canvas>
-          <video  hidden id = "video" width = "500" height = "500" autoplay></video>
+          <video  hidden id = "video" autoplay></video>
         </div>
       </div>
       <div id="my-gui-container"></div>
